fix: whitespace is not removed in table headers

--- a/app/styles/ember-rdfa-editor/_c-content.scss
+++ b/app/styles/ember-rdfa-editor/_c-content.scss
@@ -365,7 +365,6 @@ $say-editor-highlight-selected-color: var(--au-gray-300) !default;
 
   // Table styling
   table th {
-    white-space: initial;
     background-color: var(--au-white);
   }
 
